--- a/Rms frontend/browse.html
+++ b/Rms frontend/browse.html
@@ -98,9 +98,9 @@
         <div class="browse-content"><i class="fa fa-home fa-lg fa-fw"></i>Home / All job in cambodia</div>
   </div>
   <div class="b-s-container"> 
-    <img src="img/browse-post.png" class ="demo-bg"alt=""> 
+   
     <div class="b-s-content">
-      
+        <img src="img/browse-post.png" class ="demo-bg"alt=""> 
           <div class="b-s-box">  
            <select name="fa" id="fa" class="fa" title="Catagories">
             <option value="">&#xf009;
@@ -199,7 +199,7 @@
     </div>
     
     </div>
-    <div class="social-menu">
+    <div class="social-menu"id="soc">
          <ul>
            <li>Follow Us</li>
            <li>Customer Service</li>
